alignment fixes

--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,7 @@ body {
 body * {
     transition: all 0.3s ease;
 }
+a { white-space: nowrap; }
 
 #header {
     width: 100%;
